--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- --------------------  Header ------------------ --> 
         <header class="card">
             <h1 id="title">Nicholas Allen</h1>
-            <img src="images/propic.jpeg" alt="profile pic" id="logo" class="logo">
+            <img src="propic.jpeg" alt="profile pic" id="logo" class="logo">
         </header>
 
 
