--- a/projects.html
+++ b/projects.html
@@ -24,9 +24,19 @@
                 <p class="description">This project demonstrates my abilty to make fetch requests with an API key using vanilla JavaScript.</p>
             </article>
 
-            <article class="card" id="project">
-                <h2>Project X</h2>
-                <p class="description">This project demonstrates my abilty to . . .</p>
+            <article class="card" id="word-count-project">
+                <h2>Word Counter</h2>
+                <p class="description">This project demonstrates my abilty to use JavaScript to count the number of occurences of a word in a passage of text.</p>
+            </article>
+
+            <article class="card" id="word-count-project">
+                <h2>Fetch API Sandbox</h2>
+                <p class="description">This project demonstrates my abilty to fetch data from different types of sources.</p>
+            </article>
+
+            <article class="card" id="word-count-project">
+                <h2>Piano Keys</h2>
+                <p class="description">This project demonstrates my abilty to use vanilla JavaScript to manipulate the DOM.</p>
             </article>
         </main>
     </div>
